syntax = "proto2";

package user.api;

option java_package = "user.api";
option java_outer_classname = "UserApiProtos";

// Events

message CreateUserEvent {
    optional UserDTO userDTO = 1;
}

// Responses

message UsersDocument {
    repeated UserDTO userDTOs = 1;
}

message UserDocument {
    optional UserDTO userDTO = 1;
}

// DTOs

message UserDTO {
    optional string id = 1;
    optional string username = 2;
    optional uint64 createdAt = 3;
}

// Errors

message ApiError {
    optional string message = 1;
    optional string status = 2;
    optional int32 code = 3;
}
